Forge Beta: 1-#-2015 ver 1.5.33


# cards in total.


-------------
Release Notes
-------------

- New Fate Reforged cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


---------
New Cards
---------




------------------------------
New Fate Reforged branch Cards
------------------------------

Archfiend of Depravity
Crux of Fate
Daghatar the Adamant
Dragonscale General
Dromoka, the Eternal
Goblin Heelcutter
Goblin Heelcutter
Gurmag Angler
Honor's Reward
Jeskai Infiltrator
Jeskai Sage
Kolaghan, the Storm's Fury
Lightform
Marang River Prowler
Mardu Shadowspear
Mardu Strike Leader
Monastery Mentor
Sandsteppe Mastodon
Shu Yun, the Silent Tempest
Soul Summons
Soulflayer
Temporal Trespass
Ugin, the Spirit Dragon
Valorous Stance
Wandering Champion
Herald of Anafenza
Mardu Charm
Mardu Hordechief
Take Up Arms
Wingmate Roc
Cunning Strike
Harsh Sustenance
War Flare
Silumgar, the Drifting Death
Abzan Kin-Guard
Crucible of the Spirit Dragon
Hero's Blade
Mardu Scout
Soulfire Grand Master
Grim Contest
Abzan Advantage
Arashin Cleric
Aven Skirmisher
Goblin Boom Keg
Hewed Stone Retainers
Pilgrim of the Fires
Scroll of the Masters
Ugin's Construct
Atarka, World Render
Ethereal Ambush
Ojutai, Soul of Winter


------------
Known Issues
------------

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -