@@ -8,6 +8,9 @@ Forge Beta: 1-#-2015 ver 1.5.33
 Release Notes
 -------------
 
+- Zoom to a XLHQ card picture -
+Forge now supports showing XLHQ (extra large high quality) card pictures when zooming in on a card if these pictures are available. Forge will look for XLHQ card art in the "XLHQ" subfolder of the "pics/cards" folder in Forge cache. XLHQ pictures should have the ".xlhq.jpg" extension instead of the ".full.jpg" one (CCGHQ XLHQ releases comply with this naming scheme). For example, while the regular 10th edition Blaze will be looked up as "cards/pics/10E/Blaze.full.jpg", the XLHQ version will be looked up as "cards/pics/XLHQ/10E/Blaze.xlhq.jpg". If the XLHQ picture is not available Forge will show you the regular card picture in the zoomed view, as usual. Please note that XLHQ versions of cards are *only* showed in the zoom view, regular card pictures are still used (LQ/HQ, depending on what you're using) on the battlefield and elsewhere in the game because XLHQ art is significantly more taxing in memory consumption even when compared to standard high quality (HQ) releases (and in addition to that, XLHQ card borders are not cropped the way Forge expects them in order to show them properly on the battlefield anyway). Note: as of right now, only XLHQ versions of ordinary cards are supported (for instance, tokens are not supported yet).
+
 - New Fate Reforged cards -
 We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.
 
@@ -28,7 +31,6 @@ Crux of Fate
 Daghatar the Adamant
 Dragonscale General
 Dromoka, the Eternal
-Goblin Heelcutter
 Goblin Heelcutter
 Gurmag Angler
 Honor's Reward
